docs/7.52/md/abensql_injections_scrty.md
---
title: "SQL Injections"
description: |
  An SQL injection(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_injection_glosry.htm 'Glossary Entry') is a widely used attack method on insufficiently secure input from outside. An SQL injection passes malicious SQL code injected into a program to the database system, unchecke
version: "7.52"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_injections_scrty.htm"
abapFile: "abensql_injections_scrty.htm"
keywords: ["do", "if", "try", "method", "data", "abensql", "injections", "scrty"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Security Notes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_security.htm) →  [Security Risks Caused by Input from Outside](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynamic_programming_scrty.htm) → 

SQL Injections

An [SQL injection](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_injection_glosry.htm "Glossary Entry") is a widely used attack method on insufficiently secure input from outside. An SQL injection passes malicious SQL code injected into a program to the database system, unchecked and unmasked. In ABAP, this can occur when the following programming techniques are used:

-   [Dynamically specified tokens in Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_dyn_tokens_scrty.htm)

-   [Using ADBC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_adbc_scrty.htm)

-   [Using AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_amdp_scrty.htm)

-   [Using Object Services](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_os_query_scrty.htm)

-   [Generic Programming](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_gen_prog_scrty.htm)

Continue
[SQL Injections Using Dynamic Tokens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_dyn_tokens_scrty.htm)
[SQL Injections Using ADBC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_adbc_scrty.htm)
[SQL Injections Using AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_amdp_scrty.htm)
[SQL Injections Using Object Services](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_os_query_scrty.htm)
[SQL Injections Using Generic Programming](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_inj_gen_prog_scrty.htm)